--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 		<!-- Подключение иконки сайта -->
 		<link rel="icon" href="#">
 		<!-- Подключение CSS -->
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet"/>
-		<link href="css/all.css" rel="stylesheet" >
+
+		<!-- animate -->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
+
+		<!-- fontawesome -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
+		<!-- <link href="css/all.css" rel="stylesheet" > -->
+
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 
 	</head>
@@ -29,12 +35,12 @@
 
 		<!-- About -->
 		<section class="about">
-			<div class="about__info animate__animated animate__fadeInLeft">
+			<div class="about__info animate__animated animate__fadeInLeft animate__slow">
 				<h1>Солнечные панели GreenRobotic</h1>
     			<p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
     			<button>Узнать подробнее <i class="fas fa-angle-right"></i></button>
 			</div>
-			<div class="about__images animate__animated animate__fadeInRight">
+			<div class="about__images animate__animated animate__fadeInRight animate__slow">
 				<img class="about__sun-image" src="img/sun.png">
     			<img class="about__image" src="img/solar-panel.png">
 			</div>
@@ -105,7 +111,7 @@
 			<div class="footer__copyright">GreenCorp © 2021</div>	
 		</footer>
 		<!-- Подключение JavaScript  -->
-		<script src="js/all.js"></script>
+		<!-- <script src="js/all.js"></script> -->
 	</body>
 </html>
 
