--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
 			</div>
 		</section> <!-- /about -->
 
+		<!-- Features -->
+		<section class="features" id="features">
+			<div class="cards">
+
+				<div class="card">
+
+					<div class="card__logo logo-solar"><i class="fas fa-solar-panel"></i></div>
+					<h3>Уменьшите счета за электричество</h3>
+					<p>Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за электричество.</p>
+
+				</div>
+
+				<div class="card">
+
+					<div class="card__logo logo-24">24/7</div>
+					<h3>Мониторинг электроэнергии</h3>
+					<p>Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.</p>
+
+				</div>
+
+				<div class="card">
+
+					<div class="card__logo logo-chart"><i class="fas fa-chart-line"></i></div>
+					<h3>Максимальная эффективность</h3>
+					<p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами.</p>
+
+				</div>
+			
+			</div>
+
+			<div class="features__border"></div>
+			
+		  </section><!-- /features -->
+
 		<!-- Form -->
 		<section class="form">
 			<div class="form__container">
@@ -112,6 +146,7 @@
 		</footer>
 		<!-- Подключение JavaScript  -->
 		<!-- <script src="js/all.js"></script> -->
+		<script src="js/script.js"></script>
 	</body>
 </html>
 
