Добавил раздел Promo

--- a/index.html
+++ b/index.html
@@ -114,7 +114,26 @@
 
 			</div>
 
-		  </section><!-- /features -->
+		</section> <!-- /features -->
+
+			<!-- Promo -->
+		<section class="promo">
+
+			<div class="promo__image"></div>
+  			<div class="promo__right">
+				  <div class="promo__card">
+					<h2>Зарядите свой дом</h2>
+					<p>	
+						Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна
+					</p>
+					<p>
+						Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии.
+					</p>
+					<button>Заказать<i class="fas fa-chevron-right"></i></button>
+				  </div>
+			  </div>
+
+		</section> <!-- /promo -->
 
 		<!-- Form -->
 		<section class="form">
