--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 
 				<div class="card">
 
-					<div class="card__logo logo-solar"><i class="fas fa-solar-panel"></i></div>
+					<div class="card__logo yellow">
+						<i class="fas fa-solar-panel"></i>
+					</div>
 					<h3>Уменьшите счета за электричество</h3>
 					<p>Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и счета за электричество.</p>
 
@@ -60,7 +62,9 @@
 
 				<div class="card">
 
-					<div class="card__logo logo-24">24/7</div>
+					<div class="card__logo red">
+						24/7
+					</div>
 					<h3>Мониторинг электроэнергии</h3>
 					<p>Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.</p>
 
@@ -68,7 +72,9 @@
 
 				<div class="card">
 
-					<div class="card__logo logo-chart"><i class="fas fa-chart-line"></i></div>
+					<div class="card__logo green">
+						<i class="fas fa-chart-line"></i>
+					</div>
 					<h3>Максимальная эффективность</h3>
 					<p>Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на крышах со сложными углами.</p>
 
@@ -82,11 +88,14 @@
 
 				<div class="features__feedback-left">
 					<h2>
-						Нам доверяет <br> 
+						Нам доверяет 
+						<br> 
 						5000+ счастливых клиентов
 					</h2>
 					<p>
-						Мы помогли тысячам людей перейти на зеленую энергию. <br> После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании
+						Мы помогли тысячам людей перейти на зеленую энергию. 
+						<br> 
+						После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании
 					</p>
 				</div>
 
@@ -116,12 +125,13 @@
 
 		</section> <!-- /features -->
 
-			<!-- Promo -->
+		<!-- Promo -->
 		<section class="promo">
 
 			<div class="promo__image"></div>
+
   			<div class="promo__right">
-				  <div class="promo__card">
+				  <div class="promo__text">
 					<h2>Зарядите свой дом</h2>
 					<p>	
 						Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна
@@ -129,7 +139,10 @@
 					<p>
 						Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии.
 					</p>
-					<button>Заказать<i class="fas fa-chevron-right"></i></button>
+					<div class="promo__button-wrap">
+						<button type="button">Заказать<i class="fas fa-chevron-right"></i></button>
+					</div>
+					
 				  </div>
 			  </div>
 
