--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
 		<!-- About -->
 		<section class="about">
+
+			<!--canvas-->
+			<canvas class="orb-canvas" id="orb-canvas"></canvas> 
+
 			<div class="about__info animate__animated animate__fadeInLeft animate__slow">
 				<h1>Солнечные панели GreenRobotic</h1>
     			<p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -214,6 +218,7 @@
 		</footer>
 		<!-- Подключение JavaScript  -->
 		<!-- <script src="js/all.js"></script> -->
+		<script src="js/canvas.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
