--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					<h2>
 						Нам доверяет 
 						<br> 
-						5000+ счастливых клиентов
+						<div class="features__clients-count">5000+</div> счастливых клиентов
 					</h2>
 					<p>
 						Мы помогли тысячам людей перейти на зеленую энергию. 
@@ -219,6 +219,8 @@
 		<!-- Подключение JavaScript  -->
 		<!-- <script src="js/all.js"></script> -->
 		<script src="js/canvas.js"></script>
+		<!-- <script src="js/test.js"></script> -->
+		<script src = "js/animation.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
