Добавил выборе новой опции в селекте

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		</section> <!-- /promo -->
 
 		<!-- Form -->
-		<section class="form">
+		<section class="form" id="form">
 			<div class="form__container">
 				<h1>Оставьте свои контакты</h1>
 				<p>
@@ -181,7 +181,8 @@
 							<option value="10-30">10 000₽ – 30 000₽</option>
 							<option value="30–60">30 000₽ – 60 000₽</option>
 							<option value="60–100">60 000₽ – 100 000₽</option>
-							<option value="100+">100 000₽</option>
+							<!-- <option value="100+">100 000₽</option> -->
+							<option value="other">Другое</option>
 						</select>
 					</div>
 						<button class="form__submit" type="submit">Отправить заявку</button>
@@ -221,7 +222,7 @@
 		<script src="js/canvas.js"></script>
 		<!-- <script src="js/test.js"></script> -->
 		<script src = "js/animation.js"></script>
-		<script src="js/script.js"></script>
+		<!-- <script src = "js/script.js"></script> -->
 	</body>
 </html>
 
